--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
-						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
-						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
-						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
-						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
+						<li><a href="index.html#intro" title="">Home</a></li>
+						<li><a href="index.html#about" title="">About</a></li>
+						<li><a href="index.html#resume" title="">Brands</a></li>
+						<li><a href="index.html#portfolio" title="">Mixers</a></li>
+						<li><a href="index.html#services" title="">How to Drink</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
 						<li><a href="styles.html" title="">Style Demo</a></li>				
 					</ul>
@@ -73,15 +73,16 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Juan Dela Cruz.</h1>
+
+	   			<h5>SAWGRA$$ GIN</h5>
+	   			<h1>Life Changing</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
-	   				<span>UI/UX Designer</span> 
+	   				<span>HIgh Class Gin</span>
+	   				
 	   			</p>
 
-	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
+	   			<a class="button stroke smoothscroll" href="#about" title="">More About Our Gin</a>
 
 	   		</div>  
    			
