--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Kards</title>
+	<title>SawGra$$</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -74,7 +74,7 @@
    			<div class="col-twelve">
 
 
-	   			<h5>SAWGRA$$ GIN</h5>
+	   			<h5>SawGra$$ GIN</h5>
 	   			<h1>Life Changing</h1>
 
 	   			<p class="intro-position">
