--- a/styles.html
+++ b/styles.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Style Demo - Kards</title>
+	<title>Style Demo - SawGra$$</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -59,7 +59,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">SAWGRASS</a>
+		         <a href="index.html">SawGra$$</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
