--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    	<div class="row">
 
    		<div class="top-bar">
-   			<a class="menu-toggle" href="#"><span>Menu</span></a>
+   			<a class="menu-toggle" href="SawGra$$"><span>Menu</span></a>
    			<a href="index.html">SawGra$$</a>
 		      </div>		      
 
