--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
    		<div class="top-bar">
    			<a class="menu-toggle" href="SawGra$$"><span>Menu</span></a>
+   			<div class="logo">
    			<a href="index.html">SawGra$$</a>
 		      </div>		      
 
