--- a/styles.html
+++ b/styles.html
@@ -58,7 +58,7 @@
    		<div class="top-bar">
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
-	   		<div class="logo2">
+	   		<div class="logo">
 		         <a href="index.html">SawGra$$</a>
 		      </div>		      
 
