--- a/index.html
+++ b/index.html
@@ -45,15 +45,23 @@
    			<a href="index.html">SawGra$$</a>
 		      </div>		      
 
-		   	<nav id="main-nav-wrap">
-					<ul class="main-navigation">
-						<li><a href="index.html#intro" title="">Home</a></li>
-						<li><a href="index.html#about" title="">About</a></li>
-						<li><a href="index.html#resume" title="">Brands</a></li>
-						<li><a href="index.html#portfolio" title="">Mixers</a></li>
-						<li><a href="index.html#services" title="">How to Drink</a></li>					
-					</ul>
-				</nav>    		
+	<nav class="menu">
+    <ul class="active">
+        <li class="current-item"><a href="#">Home</a></li>
+        <li><a href="#">My Work</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Get in Touch</a></li>
+        <li><a href="#">Blog</a></li>
+    </ul>
+ 
+    <a class="toggle-nav" href="#">&#9776;</a>
+ 
+    <form class="search-form">
+        <input type="text">
+        <button>Search</button>
+    </form>
+</nav>
+
    		</div> <!-- /top-bar --> 
    		
    	</div> <!-- /row --> 		
