--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
+		         <a href="index.html">SawGra$$</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -53,8 +53,7 @@
 						<li><a href="index.html#resume" title="">Brands</a></li>
 						<li><a href="index.html#portfolio" title="">Mixers</a></li>
 						<li><a href="index.html#services" title="">How to Drink</a></li>					
-						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
+								
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
