--- a/styles.html
+++ b/styles.html
@@ -102,6 +102,7 @@
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
+						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a href="index.html#intro" title="">Home</a></li>
 						<li><a href="index.html#about" title="">About</a></li>
 						<li><a href="index.html#resume" title="">Brands</a></li>
