--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	   				
 	   			</p>
 
-	   			<a class="button stroke smoothscroll" href="#about" title="">More About Our Gin</a>
+	   			<a class="button stroke smoothscroll" href="#about" title="">Getting Kristen's Drunk since 1776</a>
 	   				   				
 	   			</p>
   </div>
