--- a/styles.html
+++ b/styles.html
@@ -97,7 +97,7 @@
 	   				
 	   			</p>
   </div>
-	   			<a class="button stroke smoothscroll" href="#about" title="">More About OUR Gin</a>
+	   			<a class="button stroke smoothscroll" href="#about" title="">more about our gin</a>
 	   			  		      
 
 		   	<nav id="main-nav-wrap">
