--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   	
-		         <a href="index.html">SawGra$$</a>
+		         <<h5><p style="font:italic;">SAWGRAss GIN</h5>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -75,7 +75,7 @@
    			<div class="col-twelve">
 
 
-	   			<h5>SawGra$$ GIN</h5>
+	   			<h5><p style="font:italic;">SAWGRAss GIN</h5>
 	   			<h1>Life Changing</h1>
 
 	   			<p class="intro-position">
