--- a/styles.html
+++ b/styles.html
@@ -89,7 +89,7 @@
 
    			<div class="col-twelve">
 
-	   			<h5><p style="font:italic;">SAWGRAss GIN</h5>
+	   			<h5><p style="font:italic;!important">SAWGRAss GIN</h5>
 	   			<h1>Life Changing</h1>
 
 	   			<p class="intro-position">
