--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   	
-		         <<h5><p style="font:italic;!important">SAWGRAss GIN</h5>
+		         <<h5><p style="font:italic;!important">SAWGRAss GIN</p></h5>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
